--- a/main.css
+++ b/main.css
@@ -1,17 +1,59 @@
 .header {
-    background-color:rosybrown;
+    width: 50%;
+    margin-left: 400px;
 }
 
-.background-one {
+.declaration {
+    margin: 20px;
+    width: 50%;
+    margin-right: 50px;
+    margin-left: 400px;
+}
+
+.todolist {
     background-color: green;
     padding: 9px;
+    width: 75%;
+    height: 170px;
+    font-family:arial;
+    font-size: 20px;
+    font-weight: bold;
+    margin-right: 50px;
+    margin-left: 465px;
+    width: 700px;
 }
 
-.container {
-    border: 2px solid blue;
-    margin-top: 50px;
-    margin-right: 250px;
-    margin-bottom: 200px;
-    margin-left: 200px;
-    padding: 10px 10px 10px 30px
+#links {
+    text-align: center;
+    font-size: 20px;
+    border: solid 10px lightgreen;
+    width: 50%;
+    margin-left: 420px;
+    margin-top: 10px;
+}
+#catface {
+    margin: 20px;
+    border-style: groove;
+    text-align: center;
+    width: 25%;
+    margin-left:600px;
+    border: inset 5px darkred;
+    background-color: lightskyblue;
+}
+
+h1, p {
+    text-align: center;
+    border: inset 10px darkblue;
+    width: 80%;
+    margin-left: 100px;
+    background-color:palegreen
+}
+
+h3, p {
+    border: 5px solid lightseagreen;
+    width: 50%;
+    font-size: 20px;
+    margin-right: 50px;
+    margin-left: 220px;
+    
 }
